*SVN*

* Oracle: fix lob and text default handling.  #7344 [gfriedrich, Michael Schoen]

* SQLServer: don't choke on strings containing 'null'.  #7083 [Jakob S]

* MySQL: blob and text columns may not have defaults in 5.x. Update fixtures schema for strict mode.  #6695 [Dan Kubb]

* update_all can take a Hash argument. sanitize_sql splits into two methods for conditions and assignment since NULL values and delimiters are handled differently.  #6583, #7365 [sandofsky, Assaf]

* MySQL: SET SQL_AUTO_IS_NULL=0 so 'where id is null' doesn't select the last inserted id.  #6778 [Jonathan Viney, timc]

* Use Date#to_s(:db) for quoted dates.  #7411 [Michael Schoen]

* Don't create instance writer methods for class attributes.  Closes #7401 [Rick]

* Docs: validations examples.  #7343 [zackchandler]

* Add missing tests ensuring callbacks work with class inheritance.  Closes #7339 [sandofsky]

* Fixtures use the table name and connection from set_fixture_class.  #7330 [Anthony Eden]

* Remove useless code in #attribute_present? since 0 != blank?.  Closes #7249 [Josh Susser]

* Fix minor doc typos. Closes #7157 [Josh Susser]

* Fix incorrect usage of #classify when creating the eager loading join statement.  Closes #7044 [Josh Susser]

* SQLServer: quote table name in indexes query.  #2928 [keithm@infused.org]

* Subclasses of an abstract class work with single-table inheritance.  #5704, #7284 [BertG, nick+rails@ag.arizona.edu]

* Make sure sqlite3 driver closes open connections on disconnect [Rob Rasmussen]

* [DOC] clear up some ambiguity with the way has_and_belongs_to_many creates the default join table name.  #7072 [jeremymcanally]

* change_column accepts :default => nil. Skip column options for primary keys.  #6956, #7048 [dcmanges, Jeremy Kemper]

* MySQL, PostgreSQL: change_column_default quotes the default value and doesn't lose column type information.  #3987, #6664 [Jonathan Viney, manfred, altano@bigfoot.com]
